2-http-filter/envoy-http-route.yaml
static_resources:
  listeners:
    name: test-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager 
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: echo-service  
          route_config:
            name: echo-service
            virtual_hosts:
            - name: echo-service
              domains:
              - '*'
              routes:
              - match: { prefix: "/subset1"}
                route:
                  cluster: echo-service-subset1
              - match: { prefix: "/subset2"}
                route:
                  cluster: echo-service-subset2
              - match: { prefix: "/"}
                route:
                  cluster: echo-service
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout      
  clusters:
  - name: echo-service-subset1
    type: STRICT_DNS
    connect_timeout: 5s
    lb_policy: round_robin
    load_assignment:
      cluster_name: echo-service-subset1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: instance1
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance2
                port_value: 5678
  - name: echo-service-subset2
    type: STRICT_DNS
    connect_timeout: 5s
    lb_policy: round_robin
    load_assignment:
      cluster_name: echo-service-subset2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: instance3
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance4
                port_value: 5678
  - name: echo-service
    type: STRICT_DNS
    connect_timeout: 5s
    lb_policy: round_robin
    load_assignment:
      cluster_name: echo-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: instance1
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance2
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance3
                port_value: 5678
        - endpoint:
            address:
              socket_address:
                address: instance4
                port_value: 5678
